finish index&aws deploy

--- a/templates/base.html
+++ b/templates/base.html
@@ -204,7 +204,7 @@
             height={{config.logo.height | default("auto") | tojson}}
             width={{config.logo.width | default("auto") | tojson}} align="center"
           >
-          <span class="lead">EMNLP 2020</span>
+          <span class="lead">AAAI 2021</span>
         </p>
         <p class="float-right"><a href="#" class="text-dark">Back to Top</a></p>
         <p class="text-center">© 2020 {{config.organization}}</p>
