--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
       </h2>
     </div>
   </div>
-  <div class="page__hero-caption">Image Credit: NASA</div>
+{#  <div class="page__hero-caption">Image Credit: NASA</div>#}
 </div>
 {% endblock %}
 
