add part of information of AAAI2021 papers in papers.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,9 +39,9 @@
     <!-- Library libs -->
     <script src="static/js/typeahead.bundle.js"></script>
 
-    <script src="https://craig.global.ssl.fastly.net/js/mousetrap/mousetrap.min.js?a4098"></script>
+    <script src="static/js/mousetrap.min.js?a4098"></script>
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+{#    <link rel="stylesheet" href="static/css/all.css">#}
 
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha256-YLGeXaapI0/5IgZopewRJcFXomhRMlYYjugPLSyNjTY=" crossorigin="anonymous">
