--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@
     ('sponsors.html', 'Sponsors'),
     ('http://' + config.chat_server, 'Chat'),
     (config.gather_town , 'Gather'),
-    ('organizers.html', 'Organizers'),
+    ('organizerss.html', 'Organizers'),
     ('about.html', 'Help'),
     ] -%}
 
