--- a/templates/invited_talks.html
+++ b/templates/invited_talks.html
@@ -1,4 +1,4 @@
-{% set active_page = "Student Programs" %}
+{% set active_page = "Invited talks" %}
 {% extends "base.html" %}
 
 {% block top %}
@@ -9,7 +9,7 @@
 
 <div class="row">
   <div class="col-md-7 col-sm-12 pr-5 lead">
-    <p>Welcome to Student Programs!<br><br>
+    <p>Welcome to Invited talks!<br><br>
       Here is nothing left.
     </p>
   </div>
