--- a/templates/papers_vis.html
+++ b/templates/papers_vis.html
@@ -31,9 +31,9 @@
   <li class="nav-item">
     <a class="nav-link active" href="papers_vis.html">Visualization</a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" href="papers_keyword_vis.html">Browse Keywords</a>
-  </li>
+{#  <li class="nav-item">#}
+{#    <a class="nav-link" href="papers_keyword_vis.html">Browse Keywords</a>#}
+{#  </li>#}
   <li class="nav-item">
     <a class="nav-link" href="papers.html?showFavs=1" id="tabFavs"><i class="fas fa-star"></i> Favorites</a>
   </li>
