--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
     ('index.html', 'Home'),
     ('schedule.html', 'Schedule'),
     ('plenary_sessions.html', 'Plenary'),
-    ('papers.html', 'Paper'),
+    ('papers.html', 'Papers'),
     ('iaai_eaai.html', 'IAAI/EAAI'),
     ('events.html','Events'),
     ('community.html','Community'),
