--- a/templates/paper.html
+++ b/templates/paper.html
@@ -95,11 +95,11 @@
         Demo
       </a>
       {% endif %}
-      {% if paper.content.program == "main" %}
+{#      {% if paper.content.program == "main" %}#}
       <a class="card-link" target="_blank" href="https://www.connectedpapers.com/conferece-redirect/main/{{ config.connected_papers_conference_name }}/{{paper.id}}/graph">
         Connected Papers
       </a>
-      {% endif %}
+{#      {% endif %}#}
 
       {% if paper.content.material %}
       {% for material in paper.content.material.split("|") %}
