update committee portrait and FAQ

--- a/templates/base.html
+++ b/templates/base.html
@@ -234,11 +234,11 @@
                   </a>
 
                   <div class="dropdown-menu" aria-labelledby="helpNavbarDropdown">
-                   <a class="dropdown-item" href="faq.html">
+                   <a class="dropdown-item" href="about.html">
                       FAQ
                     </a>
-                    <a class="dropdown-item" href="committees.html">
-                      Committees
+                    <a class="dropdown-item" href="organizers.html">
+                      Committee
                     </a>
                     <a class="dropdown-item" href="help_desk.html">
                       Help Desk
