--- a/templates/committees.html
+++ b/templates/committees.html
@@ -1,4 +1,5 @@
 {% set active_page = "committees" %}
+{% set page_title = "Committee" %}
 {% extends "base.html" %}
 
 {% block top %}
@@ -10,10 +11,12 @@
 <div class="row">
   <div class="col-md-7 col-sm-12 pr-5 lead">
     <p>Welcome to Committees!<br><br>
-      Here is nothing left.
+      Here is nothing left. this is a test
     </p>
   </div>
 </div>
+
+{{ components.organizergroup(committee)}}
 
 {% endblock %}
 
