--- a/templates/index.html
+++ b/templates/index.html
@@ -30,10 +30,10 @@
   <div class="row header p-6 m-5">
     <div class="p-1 mx-auto text-center text-white col-md-9 col-sm-12">
       <h2>
-        {{config.tagline|safe}}
+{#        {{config.tagline|safe}}#}
       </h2>
       <h2 class="p-5">
-        {{config.date|safe}}
+{#        {{config.date|safe}}#}
       </h2>
     </div>
   </div>
