--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
 </script>
 
 <script>
-  var email = "example@gmail.com";
-  var password = "hunter2";
+  var email = "157445378@qq.com";
+  var password = "157453";
 
   firebase.auth().onAuthStateChanged(function(user) {
     if (user) {
