--- a/templates/google_login.html
+++ b/templates/google_login.html
@@ -50,4 +50,23 @@
     <h1>Welcome to My Awesome App</h1>
     <div id="firebaseui-auth-container"></div>
   </body>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyCwK3667exMhj25F2qLdoroTfAsZupBLek",
+        authDomain: "aaai2021.firebaseapp.com",
+        projectId: "aaai2021",
+        storageBucket: "aaai2021.appspot.com",
+        messagingSenderId: "919023164606",
+        appId: "1:919023164606:web:e59d42ed5d45626a7fd2ef"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
 </html>
