--- a/templates/google_login.html
+++ b/templates/google_login.html
@@ -12,6 +12,7 @@
     <!--CDN-->
     <script src="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css" />
+    <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase.js"></script>
 
 
     <script type="text/javascript">
