--- a/templates/google_login.html
+++ b/templates/google_login.html
@@ -1,63 +1,48 @@
 <!--{% set active_page = "Google login" %}-->
 
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Sample FirebaseUI App</title>
-<!--     *******************************************************************************************-->
-<!--       * TODO(DEVELOPER): Paste the initialization snippet from:-->
-<!--       * Firebase Console > Overview > Add Firebase to your web app. *-->
-<!--       ***************************************************************************************** -->
-
-    <!--CDN-->
-    <script src="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css" />
-    <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase.js"></script>
 
 
-    <script type="text/javascript">
-      // FirebaseUI config.
-      var uiConfig = {
-        signInSuccessUrl: '<url-to-redirect-to-on-success>',
-        signInOptions: [
-          // Leave the lines as is for the providers you want to offer your users.
-          firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-          firebase.auth.FacebookAuthProvider.PROVIDER_ID,
-          firebase.auth.TwitterAuthProvider.PROVIDER_ID,
-          firebase.auth.GithubAuthProvider.PROVIDER_ID,
-          firebase.auth.EmailAuthProvider.PROVIDER_ID,
-          firebase.auth.PhoneAuthProvider.PROVIDER_ID,
-          firebaseui.auth.AnonymousAuthProvider.PROVIDER_ID
-        ],
-        // tosUrl and privacyPolicyUrl accept either url string or a callback
-        // function.
-        // Terms of service url/callback.
-        tosUrl: '<your-tos-url>',
-        // Privacy policy url/callback.
-        privacyPolicyUrl: function() {
-          window.location.assign('<your-privacy-policy-url>');
-        }
-      };
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>love</title>
+    <link href="favicon.ico" rel="shortcut icon" />
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-      // Initialize the FirebaseUI Widget using Firebase.
-      var ui = new firebaseui.auth.AuthUI(firebase.auth());
-      // The start method will wait until the DOM is loaded.
-      ui.start('#firebaseui-auth-container', uiConfig);
-    </script>
-  </head>
-  <body>
-    <!-- The surrounding HTML is left untouched by FirebaseUI.
-         Your app may use that space for branding, controls and other customizations.-->
-    <h1>Welcome to My Awesome App</h1>
-    <div id="firebaseui-auth-container"></div>
-  </body>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+</head>
+<body style=" background: url({{config.background_image}}) no-repeat center center fixed; background-size: 100% 100%;">
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
 
-    <script>
+    <div class="modal-dialog" style="margin-top: 10%;">
+        <div class="modal-content">
+            <div class="modal-header">
+
+                <h4 class="modal-title text-center" id="myModalLabel">AAAI 2021</h4>
+            </div>
+            <div class="modal-body" id = "model-body">
+                <div class="form-group">
+
+                    <input type="text" id="email" class="form-control"placeholder="E-mail" autocomplete="off">
+                </div>
+                <div class="form-group">
+
+                    <input type="password" id="password" class="form-control" placeholder="password" autocomplete="off">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="login">login</button>
+                </div>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+
+</body>
+</html>
+<script>
       // Your web app's Firebase configuration
       var firebaseConfig = {
         apiKey: "AIzaSyCwK3667exMhj25F2qLdoroTfAsZupBLek",
@@ -69,5 +54,23 @@
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
+
+      $("#login").click(
+            function(){
+                var email = $("#email").val();
+                var password = $("#password").val();
+                firebase.auth().createUserWithEmailAndPassword(email, password)
+                  .then((user) => {
+                    // Signed in
+                    // ...
+                    console.log(666);
+                  })
+                  .catch((error) => {
+                    var errorCode = error.code;
+                    var errorMessage = error.message;
+                    // ..
+                  });
+
+      });
+
     </script>
-</html>
